# phosphorus.rs

./: .gitignore  Cargo.toml  README.md  clippy.sh
assets/plans/: layouts.md
assets/rtr/: test.rtr
assets/rwl/: appsieThing.rwl  test.rwl
assets/tests/rtr/basic/: hello_world.rtrtest
assets/tests/rtr/casting/: number.rtrtest
assets/tests/rtr/functions/: array.rtrtest  logic.rtrtest  math.rtrtest  object.rtrtest  string.rtrtest
assets/tests/rtr/logic/: comparisons.rtrtest  truthy.rtrtest
assets/tests/rtr/math/: operations.rtrtest
assets/tests/rtr/program flow/: branch.rtrtest
src/: main.rs
src/rtr/: error.rs  log.rs  mod.rs
src/rtr/apis/: mod.rs  rwl.rs
src/rtr/ast/: mod.rs  node.rs  parser.rs
src/rtr/runtime/: compiler.rs  function.rs  instruction.rs  memory.rs  mod.rs  scope.rs  value.rs
src/rtr/runtime/values/: arr_value.rs  bool_value.rs  color_value.rs  function_value.rs  mod.rs  null_value.rs  num_value.rs  obj_value.rs  percentage_value.rs  str_value.rs  type_value.rs
src/rwl/: element.rs  error.rs  mod.rs  script.rs  value.rs
src/rwl/ast/: mod.rs  node.rs  parser.rs  position.rs  range.rs  token.rs
src/shared/: area.rs  color.rs  document.rs  fs.rs  graphics.rs  graphics_utils.rs  logging.rs  mod.rs  range.rs  theme.rs  token.rs  utils.rs  vec.rs
src/tests/: error.rs  mod.rs  parser.rs
src/tests/ast/: mod.rs
