[package]
name = "phosphorus"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[dependencies]
colored = "3.1.1"
macroquad = "0.4.14"
#raylib = "5.5.1"
